# serialScope

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  data_store.rs  file_source.rs  lib.rs  main.rs  parser.rs  serial_source.rs
src/components/: ConnectionPanel.tsx  FieldSelector.tsx  LogPanel.tsx  WaveformChart.tsx
src/store/: useStore.ts
src/types/: index.ts
