[package]
name = "serial-scope"
version = "0.1.0"
edition = "2021"
description = "Wireless communication device debug tool with serial/SSH/Telnet data sources and waveform display"

[lib]
name = "serial_scope_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
